--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,23 @@ asciidoctor {
 	dependsOn test
 }
 
+asciidoctor.doFirst {
+	delete file('/src/main/resources/static/docs')
+}
+
+task copyDocument(type: Copy) {
+	dependsOn asciidoctor
+
+	from file("build/docs/asciidoc/")
+	into file("src/main/resources/static/docs")
+}
+
+build {
+	dependsOn copyDocument
+}
+
+
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
