--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 
 	id "org.asciidoctor.jvm.convert" version "3.3.2" // asciidoctor 플러그인을 적용한다.
-	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10" // querydsl 플러그인 gradlew시 삭제
+//	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10" // querydsl 플러그인 gradlew시 삭제
 }
 
 group = 'com.swulab'
@@ -88,10 +88,10 @@ build {
 
 def querydslDir = "$buildDir/generated/querydsl"
 
-querydsl {
-	jpa = true
-	querydslSourcesDir = querydslDir
-}
+//querydsl {
+//	jpa = true
+//	querydslSourcesDir = querydslDir
+//}
 
 sourceSets {
 	main.java.srcDir querydslDir
@@ -100,12 +100,10 @@ sourceSets {
 configurations {
 	querydsl.extendsFrom compileClasspath
 }
-
-compileQuerydsl{
-	options.annotationProcessorPath = configurations.querydsl
-}
-
-
+//
+//compileQuerydsl{
+//	options.annotationProcessorPath = configurations.querydsl
+//}
 
 
 tasks.named('test') {
