--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ out/
 .vscode/
 src/main/resources/application-devdb.yml
 src/main/resources/application-localdb.yml
+src/main/resources/application-s3.yml
 
 src/main/resources/import.sql
 
