--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,14 @@ dependencies {
 
 	// s3
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
+
+	// spring security
+	compileOnly 'org.springframework.boot:spring-boot-starter-security'
+
+	//jjwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 ext {
