--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,11 @@ out/
 src/main/resources/application-devdb.yml
 src/main/resources/application-localdb.yml
 src/main/resources/application-s3.yml
+src/main/resources/application-jwt-local.yml
 
 src/main/resources/import.sql
 
 
 .jqwik-database
+
+swulab-firebase-adminsdk.json
