--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       dev:
         - devdb
         - s3
+        - jwt-dev
   pid:
     file: /home/ubuntu/swulab/eatswunee/eatswunee.pid
 
