--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,13 @@ dependencies {
 
 	// websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	// fcm
+	implementation 'com.google.firebase:firebase-admin:9.1.1'
+
+	// okhttp
+	implementation "com.squareup.okhttp3:okhttp:4.10.0"
+
 }
 
 ext {
