--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
   pid:
     file: /home/ubuntu/swulab/eatswunee/eatswunee.pid
 
+  jackson:
+    serialization:
+      FAIL_ON_EMPTY_BEANS: false
+
 
 
 
