--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,19 @@ jobs:
       with:
         java-version: '17' 
         distribution: 'temurin' 
+        
+    - name: Create dir
+      run: mkdir src/main/resources/firebase
+        
+    - name: Create file
+      run: cat src/main/resource/eatswunee/firebase/swulab-firebase-adminsdk.json | base64
+      
+    - name: Putting data
+      env:
+        DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
+      run: echo $DATA > src/main/resource/eatswunee/firebase/swulab-firebase-adminsdk.json
+      
     
-    - name: Copy firebase-adminsdk
-      run: |
-        mkdir src/main/resources/firebase
-        cp /home/ubuntu/swulab/swulab-firebase-adminsdk.json src/main/resources/firebase/
         
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
