[ADD] 포트 수정 (웹소켓)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,12 @@ spring:
         - localdb
         - s3
         - jwt-local
+        - port
       dev:
         - devdb
         - s3
         - jwt-dev
+        - port
   pid:
     file: /home/ubuntu/swulab/eatswunee/eatswunee.pid
 
