feat : 채팅 알림 보내는 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,12 @@ spring:
         - localdb
         - s3
         - jwt-local
+        - fcm-loc
       dev:
         - devdb
         - s3
         - jwt-dev
+        - fcm-dev
   pid:
     file: /home/ubuntu/swulab/eatswunee/eatswunee.pid
 
