--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,5 @@ src/main/resources/import.sql
 swulab-firebase-adminsdk.jsonapplication-fcm-dev.yml
 application-fcm-loc.yml
 application-fcm-dev.yml
-swulab-firebase-adminsdk.json
+swulab-firebase-adminsdk.jsoneatswunee-fa085-firebase-adminsdk-bvwxt-0b4d37ee08.json
+eatswunee-fa085-firebase-adminsdk-bvwxt-0b4d37ee08.json
